--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,9 @@
     "express": "^4.17.1",
     "mongoose": "^7.0.0",
     "mongodb-memory-server": "^9.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0",
+    "supertest": "^6.3.0"
   }
 }
