Eighth commit for improving the readme and analyse figma design through screenshot that used 2 - 4 % of usage resources

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Mac OSX Related Data
+# Mac OSX AI Ignored Related Data
 .DS_Store
+screen/
+view_screenshots.html
+analyze_screenshots.py
 
 # Logs
 logs
